--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,8 @@ color: var(--second-text-color)
 
 .hero{
     margin: auto;
-    padding-top: 220px;
-    padding-bottom: 187px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     justify-content: center;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../ipg1/Img14.jpg);
     background-repeat: no-repeat;
@@ -282,10 +282,10 @@ letter-spacing: 0.03em;
 display: flex;
 justify-content: center;
 align-items: center;
-padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
+padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 32px;
+    padding-right: 32px;
 
 }
 .hero-btn{
@@ -295,10 +295,6 @@ padding-top: 20px;
 .item {
     flex-basis: calc(100% / 5 - 30px);
     margin-left: 30px;
-}
-
-.buton-text-item {
-
 }
 
 
@@ -344,7 +340,7 @@ letter-spacing: 0.06em;
 }
 .social-link:hover .social-icon, 
 .social-link:focus .social-icon {
-    background-color: var(--title--text-color);
+    fill: var(--title--text-color);
 }
 
 
@@ -353,6 +349,12 @@ letter-spacing: 0.06em;
     height: 20px;
     fill: #afb1b8;
 }
+
+.masters-title{
+    margin-top: auto;
+    margin-bottom: 50px;
+}
+
 .masters{
     display: block;
     padding: 94px 0;
